src/snapshots/tests__Single item with single range and additional characters after range.snap
---
source: src/lib.rs
expression: "parse(\"hostname[0-3]-eth0.iml.com\")"
---
Ok(
    {
        "hostname0-eth0.iml.com",
        "hostname1-eth0.iml.com",
        "hostname2-eth0.iml.com",
        "hostname3-eth0.iml.com",
    },
)
