src/snapshots/tests__hostlist.snap
---
source: src/lib.rs
expression: "hostlist().easy_parse(\"oss1.local\")"
---
Ok(
    (
        [
            String(
                "oss1.local",
            ),
        ],
        "",
    ),
)
