src/snapshots/tests__leading_zeros-3.snap
---
source: src/lib.rs
expression: "leading_zeros().easy_parse(\"01\")"
---
Ok(
    (
        (
            1,
            1,
        ),
        "",
    ),
)
