src/snapshots/tests__leading_zeros-4.snap
---
source: src/lib.rs
expression: "leading_zeros().easy_parse(\"00\")"
---
Ok(
    (
        (
            1,
            0,
        ),
        "",
    ),
)
