src/snapshots/tests__leading_zeros-5.snap
---
source: src/lib.rs
expression: "leading_zeros().easy_parse(\"0\")"
---
Ok(
    (
        (
            0,
            0,
        ),
        "",
    ),
)
