src/snapshots/tests__leading_zeros.snap
---
source: src/lib.rs
expression: "leading_zeros().easy_parse(\"001\")"
---
Ok(
    (
        (
            2,
            1,
        ),
        "",
    ),
)
