src/snapshots/tests__parse.snap
---
source: src/lib.rs
expression: "parse(\"oss[1,2].local\")"
---
Ok(
    {
        "oss1.local",
        "oss2.local",
    },
)
