src/snapshots/tests__range-4.snap
---
source: src/lib.rs
expression: "range().easy_parse(\"[01-10]\")"
---
Ok(
    (
        [
            Range(
                1,
                1,
                10,
            ),
        ],
        "",
    ),
)
